--- a/doc/latex2/introduction.tex
+++ b/doc/latex2/introduction.tex
@@ -7,5 +7,6 @@ The increased concentration of PKC$\gamma$ in a dendritic spine is measured to a
 Seeing as the diffusion equation is derived from a continuous concentration distribution, using it on the enzymes in the spine seems questionable. \\
 
 This thesis will look at hybrid diffusion processes where part of the process has very few particles and other parts have enough particles to be described by a continuous diffusion equation. 
-The part with few particles will have a higher resolution in both space and time, and each particle will be modeled as a random walker which hops to the left or to the right at every time step with equal probability. 
-A large emphasis has been put on verification of the average behavior of the system in the limit where many particles are on the microscopic scale.
+The part with few particles will have a higher resolution in both space and time, and will be modeled by a stochastic process. 
+A large emphasis has been put on verification of all parts of the hybrid model. 
+Both individually and for the combined, hybrid solver to verify the average behavior of the system.
