--- a/doc/latex2/thesis.tex
+++ b/doc/latex2/thesis.tex
@@ -15,6 +15,7 @@
 \usepackage{tabularx}
 \usepackage{subfiles}
 \usepackage{color}
+\usepackage{arydshln,leftidx,mathtools}
 \makenomenclature
 
 \usepackage{pdfpages}
