--- a/doc/latex2/theory.tex
+++ b/doc/latex2/theory.tex
@@ -245,7 +245,8 @@ This is done by specifying a conversion rate denoted $Hc$ (as was done by Plapp 
 \end{equation}
 
 As before $u_{ij}$ is the solution to the 2D diffusion equation evaluated at $x_0 +i\Delta x$ and $y_0 +j\Delta y$, and $C_{ij}$ is the number of random walkers located in the rectangle defined by $x_i\pm\frac{\Delta x}{2}$ and $y_j\pm\frac{\Delta y}{2}$. 
-This means that a ''unit`` of the solution $u$ will directly correspond to $Hc$ random walkers.
+
+Equation \eqref{theory:Hc_definition} effectively states that one ''unit`` of the solution $u$ will directly correspond to $Hc$ random walkers.
 
 \section{Other possible coupling methods}
 
