some restructuring and rewriting of time step coupling

--- a/doc/latex2/analysis.tex
+++ b/doc/latex2/analysis.tex
@@ -69,6 +69,11 @@ The FE and BE schemes have errors proportional to $\Delta t$ so the tests are ex
 
 \section{Testing the PDE solver}
 
+
+\subsection{Verification by manufactured solutions}
+
+
+
 \subsection{Verification of FE scheme by exact numerical solution}
 
 Discretization of the diffusion equation by the FE scheme yields the following numerical scheme in 1D
